# StrategyBacktest

./: .gitignore  .pre-commit-config.yaml  README.md  __init__.py  output.txt  pyproject.toml
.data/: Task.xlsx  Task_simple.xlsx  simple.xlsx
Examples/: summary.xlsx  summary_ic1000000_tc0.003 _rf0.xlsx  summary_ic1000000_tc0.003_rf0.xlsx  summary_table.tex  table_ic1000000_tc0.003_rf0.xlsx.tex
example_strategies/: __init__.py  dummy_strategy.py
output/: momentum_summary_ic1000000_tc0 _rf0.xlsx  summary.xlsx  summary_ic1000000_tc0 _rf0.xlsx  summary_ic1000000_tc0.003 _rf0.xlsx  test.xlsx
report/Fusion_Report/: References.bib  aas_macros.sty  includes.tex  main.tex  titlepage.tex
report/Fusion_Report/tables/: table_daily_reb.tex  table_mom_daily_reb.tex
src/strategybacktest/: LaTeX_tables.py  __init__.py  backtest.py  functions.py  portfolio.py  strategy.py
strategybacktest/: LaTeX_tables.py  __init__.py  backtest.py  functions.py  main.py  portfolio.py  scrap.py  strategy.py
tests/: conftest.py  test_dummy_strategy.py  test_portfolio.py
