[tool.poetry]
name = "StrategyBacktest"
version = "0.9.0"
description = "FILL"
authors = [
    "Kelvin Brinham <kelvinbrinham@gmail.com>",
]
readme = "README.md"

[[tool.poetry.source]]
name = "kelvinbrinham"
url = "https://github.com/kelvinbrinham/StrategyBacktest.git"
default = false
secondary = true

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.3"
openpyxl = "^3.1.2"
matplotlib = "^3.7.2"
xlsxwriter = "^3.1.2"
jinja2 = "^3.1.2"
pytest = "^7.4.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
mypy = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
safe = true

[tool.isort]
profile = "black"
line_length = 80
skip_gitignore = true
